<resources>
    <string name="app_name">DS3Companion</string>

    <string name="TAG_Chat">Chat</string>
    <string name="tab_bosses_tittle">Bosses</string>
    <string name="tab_chat_tittle">Chat</string>
    <string name="tab_accounts_tittle">Accounts</string>

    <string name="button_register">Register</string>
    <string name="button_login">Log In</string>
    <string name="button_logout">Log Out</string>
    <string name="button_send">Send</string>
    <string name="button_delete">Delete</string>
    <string name="button_forgotPassword">Forgot Password?</string>

    <string name="message_welcome">Welcome!</string>
    <string name="message_login">Do you have an account?</string>
    <string name="message_register">Do you want to create a new account?</string>
    <string name="message_wantLogOut">Want to Log out?</string>
    <string name="message_wantDelete">Want to Delete Account?</string>
    <string name="message_userCreated">User created</string>
    <string name="message_userLogged">User logged</string>
    <string name="message_messageSend">Success uploading message</string>
    <string name="message_noLocation">User location not public</string>
    <string name="message_exitApp">Do you want to exit App?</string>
    <string name="message_exitYES">YES</string>
    <string name="message_exitNO">NO</string>
    <string name="message_gpsDelimeter">,</string>
    <string name="message_comGoogle">com.google</string>
    <string name="message_noAccounts">There are no Google accounts registrated in your device</string>
    <string name="message_TextView">TextView</string>

    <string name="hint_enter_email">Enter your email here</string>
    <string name="hint_enter_password">Enter your password here</string>
    <string name="hint_enter_username">Enter your username here</string>
    <string name="hint_enter_message">Escribe Mensaje</string>

    <string name="error_email_invalid">Email is not Valid</string>
    <string name="error_password_invalid">Password must be at least %d characters long and contain at least a number among them</string>
    <string name="error_email_or_password">Email or password are not correct, try again</string>
    <string name="error_serverDown">Server is down, try in a few minutes</string>
    <string name="error_logging">Error logging in, try again</string>
    <string name="error_messageLost">Error uploading message</string>
    <string name="error_signUp">Error signing up, try again.</string>
    <string name="error_youtubeConnect">Failed to connect to server, try later</string>

    <string name="event_registerClick">registerButtonClick</string>
    <string name="event_loginClick">loginButtonClick</string>
    <string name="event_loginCorrect">loginCorrect</string>
    <string name="event_registerCorrect">registerCorrect</string>
    <string name="event_infoBosses">infoBosses</string>

    <string name="api_key">AIzaSyBrq9T8zNPKvwrMqvVDcvAL92h0Ps2f13k</string>
    <string name="api_buttonGuides">Ver Videos</string>
    <string name="api_buttonRecientes">RECIENTES</string>
    <string name="api_buttonTopVisitas">MAS VISTOS</string>
    <string name="api_buttonRelevantes">RELEVANTES</string>
    <string name="api_videoInfo1">VIDEO TITTLE: </string>
    <string name="api_videoInfo2">Video Channel: </string>
    <string name="api_videoInfo3">Video Time: </string>

    <string name="sharedPreferences_name">test</string>
    <string name="sharedPreferences_string1">firstkey</string>
    <string name="sharedPreferences_string2">value</string>
    <string name="sharedPreferences_file">userPreferences</string>
    <string name="sharedPreferences_username">username</string>
    <string name="sharedPreferences_email">email</string>
    <string name="sharedPreferences_password">password</string>

    <string name="userclass_class1">warrior</string>
    <string name="userclass_class2">mage</string>
    <string name="userclass_class3">archer</string>
    <string name="class_startlocation">Dungeon</string>
    <string name="class_legs">legs</string>
    <string name="class_arms">arms</string>
    <string name="class_chest">chest</string>
    <string name="class_head">head</string>
    <string name="class_level">level</string>
    <string name="class_location">location</string>
    <string name="class_equipment">equipment</string>
    <string name="class_name">name</string>
    <string name="class_playTime">playTime</string>
    <string name="class_playtime">playtime</string>
    <string name="class_weapon1">weapon1</string>
    <string name="class_weapon2">weapon2</string>
    <string name="class_uid">uid</string>
    <string name="class_userdata">UserData</string>

    <string name="extra_videoNum">videoNum</string>
    <string name="extra_locationX">locationX</string>
    <string name="extra_locationY">locationY</string>
    <string name="extra_info">info</string>
    <string name="extra_userLocation">User Location</string>


    <string name="open_dots">:</string>
    <string name="name_boss1">Sabio de Cristal</string>
    <string name="name_boss2">Vigilante del Abismo</string>
    <string name="name_boss3">Principe Lothric</string>
    <string name="name_boss4">Alma de Ceniza</string>
    <string name="boss_moreData">Mas Info</string>
    <string name="boss_videoGuide">Videoguía</string>
    <string name="boss_video1">UEjjWenxaSg</string>
    <string name="boss_video2">ppkvXtr2UsM</string>
    <string name="boss_video3">s3D_nzRVXi8</string>
    <string name="boss_video4">UEjjWenxaSg</string>
    <string name="info_boss1">La mejor manera de acabar con él es acosarlo con ataques físicos. Es vulnerable a todos los tipos de daño físico, además de al veneno. Esto significa que una espada a una mano envenenada es absolutamente letal frente a él.
                              Cuando le golpeas lo suficiente se teletransporta para dejar de recibir daño. Gira la cámara hasta ver su luz y corre a por él, antes de darle tiempo a usar magia.</string>
    <string name="info_boss1Extra">La mejor manera de acabar con él es acosarlo con ataques físicos. Es vulnerable a todos los tipos de daño físico, además de al veneno. Esto significa que una espada a una mano envenenada es absolutamente letal frente a él.
                              Cuando le golpeas lo suficiente se teletransporta para dejar de recibir daño. Gira la cámara hasta ver su luz y corre a por él, antes de darle tiempo a usar magia.
        Alternativamente, puedes intentar predecir a dónde se teletransportará el Sabio (generalmente al extremo opuesto de la arena) y apresurarlo durante la pelea, ignorando la convocatoria. La convocatoria se teletransporta junto con el Sabio, por lo que es preferible una gran cantidad de daño para causar teletransportes muy rápidos, lo que le da tiempo para curarse y prepararse para encontrar al Sabio en la reaparición.</string>
    <string name="info_boss2">El enemigo es humanoide, lo que implica que puedes bloquear, desviar y contraatacar, así como apuñalar por la espalda. Dado que usan una gran espada como arma, suelen quedar desprotegidos tras sus ataques.
                              La pelea se divide en dos fases, y durante la primera aparecerán uno más de ellos cada 20 segundos.</string>
    <string name="info_boss2Extra">El enemigo es humanoide, lo que implica que puedes bloquear, desviar y contraatacar, así como apuñalar por la espalda. Dado que usan una gran espada como arma, suelen quedar desprotegidos tras sus ataques.
                              La pelea se divide en dos fases, y durante la primera aparecerán uno más de ellos cada 20 segundos.
    En la primera fase puedes hacer kite the boss hasta que aparezcan los agregados. Una vez que aparece el primer agregado, el que no tiene los ojos rojos, sigue corriendo y solo lanza cuando hay oportunidades perfectas, esas aparecen de vez en cuando ya que el jefe principal comenzará a estar más a la defensiva después de que aparezca el primer agregado.</string>
    <string name="info_boss3">Debes tener en cuenta que se teletransporta y que, si está en medio de un combo, al reaparecer lo terminara, pero puedes bloquear todos sus ataques.
                              Si se teletransporta a un punto lejano, al aparecer hace un ataque descendente con la espada, con mucho alcance en línea recta.</string>
    <string name="info_boss3Extra">Debes tener en cuenta que se teletransporta y que, si está en medio de un combo, al reaparecer lo terminara, pero puedes bloquear todos sus ataques.
                              Si se teletransporta a un punto lejano, al aparecer hace un ataque descendente con la espada, con mucho alcance en línea recta.
    Tenga cuidado porque algunos de sus combos, como la doble barra horizontal, a veces irán seguidos de una barra vertical y parece que no hay forma de saber qué combo será aparte de esperar y observar.</string>
    <string name="info_boss4">La mejor manera de acabar con él es acosarlo con ataques físicos. Es vulnerable a todos los tipos de daño físico, además de al veneno. Esto significa que una espada a una mano envenenada es absolutamente letal frente a él.
                              Cuando le golpeas lo suficiente se teletransporta para dejar de recibir daño. Gira la cámara hasta ver su luz y corre a por él, antes de darle tiempo a usar magia.</string>
    <string name="info_boss4Extra">La mejor manera de acabar con él es acosarlo con ataques físicos. Es vulnerable a todos los tipos de daño físico, además de al veneno. Esto significa que una espada a una mano envenenada es absolutamente letal frente a él.
                              Cuando le golpeas lo suficiente se teletransporta para dejar de recibir daño. Gira la cámara hasta ver su luz y corre a por él, antes de darle tiempo a usar magia.
    Alternativamente, puedes intentar predecir a dónde se teletransportará el Sabio (generalmente al extremo opuesto de la arena) y apresurarlo durante la pelea, ignorando la convocatoria. La convocatoria se teletransporta junto con el Sabio, por lo que es preferible una gran cantidad de daño para causar teletransportes muy rápidos, lo que le da tiempo para curarse y prepararse para encontrar al Sabio en la reaparición.</string>
    <string name="chat_nullLocation">" "</string>

</resources>